ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: ingress-demo
  namespace: default
spec:
  rules:
    - host: blue.io
      http:
        paths:
          - backend:
              service:
                name: blue-web
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: green.io
      http:
        paths:
          - backend:
              service:
                name: green-web
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
